# jellyfin-renamer

./: CLAUDE.md  INSTALL.md  README.md  TUI_IMPLEMENTATION_PLAN.md  TUI_USAGE.md  install.bat  install.sh  jellyfin-renamer.py  pyproject.toml  run_tui.py
core/: __init__.py  common.py  file_processor.py  movie_organizer.py  movie_parser.py  tv_organizer.py  tv_parser.py
test/: cleanup_test_videos.py  create_test_videos.py  run_tests.py  test_renamer.py
tui/: __init__.py  app.py  app.tcss
tui/components/: __init__.py  directory_picker.py  file_selector.py  progress_panel.py
tui/screens/: __init__.py  file_browser.py  main_screen.py  progress_screen.py
tui/utils/: __init__.py  tui_helpers.py
